--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</div>
 		<nav class="nav nav-top" data-state="collapsed">
 			<ul>
-				<li><a href="index.html">Page 1</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="index.html">Page 2</a></li>
 				<li><a href="index.html">Page 3</a></li>
                 <li><a href="index.html">Page 4</a></li>
