article-2-header-fix

--- a/article-2.html
+++ b/article-2.html
@@ -3,14 +3,11 @@ layout: default
 
 --- 
     
-    <h1 class="mobile-header">What is a Fixed-gear</h1>         
+    <h1 class="mobile-header">The Trend</h1>         
        <div class="unit unit-s-1 unit-spacer">
  	   <p></p>
 
 </div>
-
-       <h1 class="mobile-header">Uses</h1>         
-       <div class="unit unit-s-1 unit-spacer">
  
  	<p>These days you can't go into any major metropolitan area without seeing some young, tattooed kid on a fixed-gear bike. The single-geared beasts of burden are often built for speed and gained notoriety among messenger culture, before being appropriated by tree-hugging, smog-hating hipsters everywhere... but you know, in an ironic way.</p>
 
