--- a/404.html
+++ b/404.html
@@ -5,10 +5,10 @@
 <link href="css/404.css" rel="stylesheet">
 <title>404 Page</title>
 </head>
-<p class="title">404</p>
-<p class="title">Page Error</p>
+	<p class="title">404 Page Error</p>
 
-
+	<h1><a href="index.html">Home Page</a></h1>
+	
 <body>
 </body>
 </html>
